<resources>
    <string name="app_name">bUser</string>
    <string name="registerActivityLabel">New Account</string>
    <string name="displayActivityLabel">Welcome to bUser</string>
    <string name="mainActivityLabel">bUser</string>

    <!-- sample strings -->
    <string name="bustop1">Stop A</string>


    <!-- Preferences strings -->
    <string name="inline_preferences">inline_preference</string>
    <string name="save_route">Save route as favorite</string>
    <string name="route_saved">Route saved!</string>
    <string name="route_preferences">Route preferences</string>
    <string name="route_name">Route description</string>
    <string name="summary_edittext_preference">summary_edittext_preference</string>
    <string name="save_route_as">Save route as...</string>
    <string name="start_point">Starting point</string>
    <string name="ending_point">Ending point</string>
    <string name="closest_stop">Use closest bus stop</string>
    <string name="specific_stop">Use specific bus stop</string>
    <string name="other_stop">Other Stop</string>
    <string name="other_settings">Other Settings</string>
    <string name="start_point_choice">Set starting bus stop</string>
    <string name="end_point_choice">Set destination bus stopF</string>
    <string name="acc_settings">Manage account</string>
    <string name="summary_child_preference">summary_child_preference</string>
    <string name="summary_parent_preference">summary_parent_preference</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="summary_intent_preference">title_child_preference</string>
    <string name="title_child_preference">summary_intent_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="manage_acc_explained">Change password, fast login, logout</string>
    <string name="title_fragment_preference">title_fragment_preference</string>
    <string name="settings">Settings</string>
    <string name="rememember_creds">Remember these credentials</string>
    <string name="busstop">Paragem</string>
    <string name="title_activity_bus_stop">BusStopAct</string>
    <string name="title_activity_test_settings">Settings</string>
    <string name="proceed">Proceed.</string>
    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_inside_bus">insideBus</string>
    <string name="title_activity_stop_bus">StopBus</string>
    <string name="error_connect_failed">Connection Failed!</string>
    <string name="error_connect_lost">Connection Lost</string>


</resources>
